--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <li>Codepens - 12/03/2022 : <a href="./pages/selectedCodepens.html" target="_blank">link</a></li>
         <li>Slot Machine - 13/03/2022 : <a href="./pages/slotMachine.html" target="_blank">link</a></li>
         <li>FIFA_Table - 13/03/2022 : <a href="./pages/FIFA_Table.html" target="_blank">link</a></li>
+        <li>Ordered/Unordered lists - 13/03/2022 : <a href="./pages/ordered_unordered_lists.html" target="_blank">link</a></li>
+        <li>Nested Lists - Food - 13/03/2022 : <a href="./pages/nestedLists_food.html" target="_blank">link</a></li>
+        <li>Nested Lists - Music - 13/03/2022 : <a href="./pages/nestedLists_music.html" target="_blank">link</a></li>
     </ul>
     
 </body>
