--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <li>Ordered/Unordered lists - 13/03/2022 : <a href="./pages/ordered_unordered_lists.html" target="_blank">link</a></li>
         <li>Nested Lists - Food - 13/03/2022 : <a href="./pages/nestedLists_food.html" target="_blank">link</a></li>
         <li>Nested Lists - Music - 13/03/2022 : <a href="./pages/nestedLists_music.html" target="_blank">link</a></li>
+        <li>Simple Form Controls - 20/03/2022 : <a href="./pages/simpleFormControls.html" target="_blank">link</a></li>
     </ul>
-    
 </body>
 </html>
