--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <li>Nested Lists - Food - 13/03/2022 : <a href="./pages/nestedLists_food.html" target="_blank">link</a></li>
         <li>Nested Lists - Music - 13/03/2022 : <a href="./pages/nestedLists_music.html" target="_blank">link</a></li>
         <li>Simple Form Controls - 20/03/2022 : <a href="./pages/simpleFormControls.html" target="_blank">link</a></li>
+        <li>The Crow - 27/03/2022 : <a href="./pages/The Crow/theCrow.html" target="_blank">link</a></li>
     </ul>
 </body>
 </html>
