--- a/pages/The Crow/theCrow.html
+++ b/pages/The Crow/theCrow.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Crow</title>
-    <link rel="stylesheet" href="./the_crow.css">
+    <link rel="stylesheet" href="../../styles/the_crow.css">
     
 </head>
 <body>
